# irondirectory

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/examples/: concurrent_repro.rs  cross_ctx_repro.rs  fresh_ctx_repro.rs
crates/crypto/src/: aead.rs  digest.rs  hmac.rs  kerberos.rs  lib.rs  md4.rs  pbkdf2.rs  sign.rs
crates/crypto/testdata/: fips-dev.cnf
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs  microdns.rs  srv.rs
crates/gc/: Cargo.toml
crates/gc/src/: aggregate.rs  lib.rs  session.rs  watch.rs
crates/kdc/: Cargo.toml
crates/kdc/src/: as_exchange.rs  keytab.rs  krberror.rs  lib.rs  pac.rs  principal.rs  server.rs  tgs_exchange.rs  time.rs  wire.rs
crates/ldap/: Cargo.toml
crates/ldap/src/: conn.rs  filter.rs  framing.rs  health.rs  lib.rs  rootdse.rs  schema.rs  security.rs  session.rs  tls.rs
crates/ldap/src/gssapi/: accept.rs  mod.rs  token.rs  wrap.rs
crates/oidc/: Cargo.toml
crates/oidc/src/: claims.rs  clients.rs  codes.rs  discovery.rs  jwt.rs  lib.rs
crates/oidc/src/handlers/: authorize.rs  discovery.rs  mod.rs  token.rs  userinfo.rs
crates/partition/: Cargo.toml
crates/partition/src/: dn.rs  error.rs  key.rs  lib.rs  partition.rs  registry.rs  security_descriptor.rs  sid.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  lsarpc.rs  ndr.rs  netlogon.rs  pdu.rs  samr.rs  server.rs  uuid.rs
crates/simulate/: Cargo.toml
crates/simulate/src/: join.rs  krb_client.rs  lib.rs  lsarpc_client.rs  netlogon_client.rs  rpc_client.rs  samr_client.rs
crates/store/: Cargo.toml
crates/store/src/: binary_attrs.rs  entry.rs  index.rs  lib.rs  model.rs  ridpool.rs  store.rs
crates/store/tests/: indexed_entries.rs  live_cluster.rs  mtls_spike.rs
deploy/dns/: etcd-lb.sh  ldap-lb.sh
deploy/proxmox/: README.md  cluster.env  ironetcd.sh
deploy/systemd/: iron-gcd.conf.example  iron-gcd.service  iron-kdcd.conf.example  iron-kdcd.service  iron-ldapd.conf.example  iron-ldapd.service  iron-oidcd.conf.example  iron-oidcd.service
deploy/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
deploy/terraform/templates/: etcd-user-data.yaml.tftpl
deploy/terragrunt/: README.md  get-free-vmid.sh  root.hcl
deploy/terragrunt/config-verify/: terragrunt.hcl
deploy/terragrunt/config-verify/templates/: config-verify-user-data.yaml.tftpl
deploy/terragrunt/etcd/: .terraform.lock.hcl  terragrunt.hcl
deploy/terragrunt/etcd/templates/: etcd-user-data.yaml.tftpl
deploy/terragrunt/kdc-referral-verify/: terragrunt.hcl
deploy/terragrunt/kdc-referral-verify/templates/: kdc-node-user-data.yaml.tftpl
deploy/terragrunt/ldap/: .terraform.lock.hcl  terragrunt.hcl
deploy/terragrunt/ldap/templates/: ldap-user-data.yaml.tftpl
deploy/terragrunt/phase1-verify/: terragrunt.hcl
deploy/terragrunt/phase1-verify/templates/: kdc-user-data.yaml.tftpl  memberhost-user-data.yaml.tftpl
deploy/terragrunt/referral-verify/: terragrunt.hcl
deploy/terragrunt/referral-verify/templates/: ldap-node-user-data.yaml.tftpl
deploy/terragrunt/spnego-verify/: terragrunt.hcl
deploy/terragrunt/spnego-verify/templates/: spnego-node-user-data.yaml.tftpl
deploy/terragrunt/sssd-test/: terragrunt.hcl
deploy/terragrunt/sssd-test/templates/: ironrealm-user-data.yaml.tftpl  sssd-test-user-data.yaml.tftpl
docs/: ARCHITECTURE.md  FIPS.md  OPENSHIFT-LDAP-IDP.md  OPENSHIFT-OIDC-IDP.md  OPENSHIFT-SPNEGO-SSO.md
