[workspace]
resolver = "2"
members = [
    # Phase 1 — Tier 1 identity core. Crates are added as each is implemented;
    # boundaries are fixed here so work can land incrementally.
    "crates/partition", # FOUNDATIONAL (D8): NamingContext/Partition, registry,
                        # partition-id -> fastetcd cluster map. Built first.
    # "crates/store",   # partition-scoped DIT over fastetcd: keys, entries, indexes, watch
    # "crates/ldap",    # LDAP v3 server + AD-shaped schema + LDAPS (OpenSSL FIPS)
    # "crates/kdc",     # Kerberos KDC (AS/TGS), AES enctypes only, keytab
    # "crates/dns",     # DNS SRV autodiscovery
    # "crates/oidc",    # OAuth2/OpenID Connect authorization server (OpenShift SSO + D9 brokering)
    # "crates/gc",      # watch-fed Global Catalog / federated GAL aggregator (D8/D9)
    "crates/crypto",   # FIPS crypto facade over the `ossl` crate — validated (#1)
    # "crates/server",  # binary: wires the services together (standalone + k8s)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
authors = ["irondirectory contributors"]
repository = "https://github.com/glennswest/irondirectory"
homepage = "https://github.com/glennswest/irondirectory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# fastetcd / etcd v3 client (wire-compatible)
etcd-client = "0.14"

# FIPS crypto — OpenSSL 3.x FIPS provider via the `ossl` crate (decision D4).
# Validated on target (#1, see docs/FIPS.md): dynamic-link the system
# libcrypto via `ossl-sys`/`dynamic`. Do NOT add the crate's own `fips`
# feature — it requires OpenSSL >= 4.0 vendored from source and produces a
# self-built, non-CMVP-validated module. Real FIPS compliance comes from
# the OS-shipped, already-validated fips.so provider, loaded at runtime.
ossl = { version = "1.5.2", default-features = false, features = ["ossl-sys", "dynamic"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
