[workspace]
resolver = "2"
members = [
    # Phase 1 — Tier 1 identity core. Crates are added as each is implemented;
    # boundaries are fixed here so work can land incrementally.
    "crates/partition", # FOUNDATIONAL (D8): NamingContext/Partition, registry,
                        # partition-id -> fastetcd cluster map. Built first.
    "crates/store",     # partition-scoped DIT over fastetcd: connection
                        # harness (etcd v3 gRPC, mTLS), entries, watch (#2)
    "crates/ldap",      # LDAP v3 server: rootDSE, bind, search (#4);
                        # AD-shaped schema + LDAPS come later in the same issue
    "crates/kdc",       # Kerberos KDC (AS/TGS), AES enctypes only, keytab (#5)
    "crates/dns",       # LDAP/Kerberos SRV autodiscovery via MicroDNS (#6)
    # "crates/oidc",    # OAuth2/OpenID Connect authorization server (OpenShift SSO + D9 brokering)
    # "crates/gc",      # watch-fed Global Catalog / federated GAL aggregator (D8/D9)
    "crates/crypto",   # FIPS crypto facade over the `ossl` crate — validated (#1)
    # "crates/server",  # binary: wires the services together (standalone + k8s)
]

[workspace.package]
version = "0.8.0"
edition = "2021"
# Bumped 1.82 -> 1.85 for rasn/rasn-ldap (#4), which use edition 2024.
rust-version = "1.85"
license = "Apache-2.0"
authors = ["irondirectory contributors"]
repository = "https://github.com/glennswest/irondirectory"
homepage = "https://github.com/glennswest/irondirectory"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# fastetcd / etcd v3 client (wire-compatible). `tls` feature = tonic's
# rustls-backed transport, used for mTLS to the fastetcd cluster (D1).
etcd-client = { version = "0.19", features = ["tls"] }

# FIPS crypto — OpenSSL 3.x FIPS provider via the `ossl` crate (decision D4).
# Validated on target (#1, see docs/FIPS.md): dynamic-link the system
# libcrypto via `ossl-sys`/`dynamic`. Do NOT add the crate's own `fips`
# feature — it requires OpenSSL >= 4.0 vendored from source and produces a
# self-built, non-CMVP-validated module. Real FIPS compliance comes from
# the OS-shipped, already-validated fips.so provider, loaded at runtime.
ossl = { version = "1.5.2", default-features = false, features = ["ossl-sys", "dynamic"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }

# LDAP v3 wire protocol (RFC 4511) -- ASN.1/BER types + codec generated via
# the `rasn` framework, rather than hand-rolling BER (#4).
rasn = "0.28"
rasn-ldap = "0.28"

# Kerberos 5 wire protocol (RFC 4120) -- ASN.1/DER types from the same
# `librasn/rasn` org as rasn-ldap, same rationale (#5): don't hand-roll
# the message types, only the crypto/protocol logic they don't cover.
rasn-kerberos = "0.28"

# Kerberos timestamps: rasn's GeneralizedTime is chrono::DateTime<FixedOffset>.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# LDAPS/StartTLS (D4: "TLS via OpenSSL FIPS provider, not rustls+ring").
# Note this is the plain `openssl` crate (rust-openssl, full libssl/TLS
# bindings), NOT the `ossl` crate above -- `ossl`/kryoptic only binds
# libcrypto's EVP APIs, it has no SSL/TLS state machine at all. Default
# features dynamically link the system libssl/libcrypto (no `vendored`),
# so it picks up the same OS-validated fips.so provider as iron-crypto
# when OPENSSL_CONF activates it (see docs/FIPS.md).
openssl = "0.10"
tokio-openssl = "0.6"

# MicroDNS REST client (#6 -- SRV record publishing, no DNS protocol code
# of our own; MicroDNS is the actual nameserver).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
