[package]
name = "iron-ldap"
description = "LDAP v3 server: rootDSE, bind, search, over the iron-store DIT (#4)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
iron-partition = { path = "../partition" }
iron-store = { path = "../store" }
rasn = { workspace = true }
rasn-ldap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
