[package]
name = "iron-store"
description = "Partition-scoped DIT over fastetcd: connection harness (etcd v3 gRPC, mTLS), entries, secondary indexes, watch (#2/#3)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
iron-partition = { path = "../partition" }
etcd-client = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
